--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -13,6 +13,7 @@ analyzer:
     deprecated_member_use: ignore
     invalid_use_of_protected_member: ignore
     invalid_use_of_visible_for_testing_member: ignore
+    must_be_immutable: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
