--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -14,6 +14,7 @@ analyzer:
     invalid_use_of_protected_member: ignore
     invalid_use_of_visible_for_testing_member: ignore
     must_be_immutable: ignore
+    non_constant_identifier_names: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
