--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,19 +30,17 @@ environment:
 dependencies:
   bloc: ^8.1.4
   blur: ^4.0.0
-  build_runner: ^2.4.13
   carousel_slider: ^5.0.0
-  copy_with_extension: ^5.0.4
-  copy_with_extension_gen: ^5.0.4
   cupertino_icons: ^1.0.8
   firebase_core: ^3.6.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
-  flutter_gen_runner: ^5.8.0
+  flutter_easyloading: ^3.0.5
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.10+1
-  go_router: ^14.3.0
+  freezed_annotation: ^2.4.4
+  google_fonts: ^6.2.1
   gradient_borders: ^1.0.1
   json_serializable: ^6.8.0
   outline_gradient_button: ^2.0.1+1
@@ -51,9 +49,12 @@ dependencies:
   video_player: ^2.9.2
 
 dev_dependencies:
+  build_runner: ^2.4.13
+  flutter_gen_runner: ^5.8.0
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.5.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
